--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,7 @@
 {
     "version": 2,
-    "routes": [
-      { "src": "/(.*)", "dest": "/api/index.js" }
-    ]
+    "builds": [
+      { "src":"./index.js" ,"use":"@vercel/node"}
+    ],
+    "routes":[{"src":"/(.*)","dest":"/"}]
   }
