--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -4,6 +4,6 @@
     { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/login" }
+    { "src": "/login", "dest": "/index.js" }
   ]
 }
